objects/Study_Site__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRO__c</fullName>
        <formula>Site__r.Pharma_CRO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Safe_Trial_Site_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe Trial Site ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <formula>Site__r.Latitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from the Site account</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <formula>Site__r.Longitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from the Site Account</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTC_Connection_Preference__c</fullName>
        <description>NS:06/13/18</description>
        <label>PTC Connection Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connect to Pharma</fullName>
                </value>
                <value>
                    <fullName>Connect to Trial Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pharma_Co_Internal_Ref__c</fullName>
        <inlineHelpText>Site # provided by Pharma Company</inlineHelpText>
        <label>Pharma Co Internal Ref #</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharma_Company__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Study__r.Pharma_Company__r.Id, Study__r.Pharma_Company__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pharma Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup the &apos;SSC-####&apos; ID here. Must be Principal Investigator in the &apos;Study Site Contacts&apos; related list below.</inlineHelpText>
        <label>Principal Investigator: SSC #</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must be Principal Investigator</errorMessage>
            <filterItems>
                <field>Studies_Sites_Contact__c.Site_Contact_Type__c</field>
                <operation>equals</operation>
                <value>Principal Investigator</value>
            </filterItems>
            <infoMessage>Look up PI&apos;s</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Studies_Sites_Contact__c</referenceTo>
        <relationshipLabel>Trial Sites</relationshipLabel>
        <relationshipName>Trial_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_No__c</fullName>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Site #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>This Account isn&apos;t a Pharma Site</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pharma Trial Site</value>
            </filterItems>
            <infoMessage>Must choose Pharma Site</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trial Sites</relationshipLabel>
        <relationshipName>Study_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Site_Contact_PI__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Study Site Contact-PI</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Studies_Sites_Contact__c.Site_Contact_Type__c</field>
                <operation>equals</operation>
                <value>Principal Investigator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Studies_Sites_Contact__c</referenceTo>
        <relationshipLabel>Trial Sites (Study Site Contact-PI)</relationshipLabel>
        <relationshipName>Study_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Site_Principal_Investigator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Site Principal Investigator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Studies_Sites_Contact__c.Site_Contact_Type__c</field>
                <operation>equals</operation>
                <value>Principal Investigator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Studies_Sites_Contact__c</referenceTo>
        <relationshipName>Study_Sites1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <label>Trial</label>
        <referenceTo>Study__c</referenceTo>
        <relationshipLabel>Trial Sites</relationshipLabel>
        <relationshipName>Study_Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Trial_Site_Details__c</fullName>
        <label>Trial Site Details</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trial_Site_Name__c</fullName>
        <formula>Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Site Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Site_Type__c</fullName>
        <label>Trial Site Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pharma</fullName>
                    <default>true</default>
                    <label>Pharma</label>
                </value>
                <value>
                    <fullName>JIT</fullName>
                </value>
                <value>
                    <fullName>CRO</fullName>
                    <isActive>false</isActive>
                    <label>CRO</label>
                </value>
                <value>
                    <fullName>Trial Site</fullName>
                    <isActive>false</isActive>
                    <label>Trial Site</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>update</label>
        <type>Checkbox</type>
    </fields>
    <label>Trial Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Study__c</columns>
        <columns>Site__c</columns>
        <columns>Trial_Site_Name__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Site_No__c</columns>
        <columns>CRO__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Empty_Coordinates</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Trial_Site_Name__c</columns>
        <columns>Address__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Latitude__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Longitude__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Empty Coordinates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Trial Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trial Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Country_Field_cannot_be_Empty</fullName>
        <active>true</active>
        <description>ENT-8542</description>
        <errorConditionFormula>LEN(Country__c)&lt;&gt; 2</errorConditionFormula>
        <errorMessage>Country must be two characters long</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Trial_SIte_Zip_Code_must_be_5_or_9_digit</fullName>
        <active>true</active>
        <description>ENT-8543</description>
        <errorConditionFormula>AND( OR(Country__c = &quot;US&quot;), NOT(REGEX(Zip_Code__c , &quot;\\d{5}(-\\d{4})?&quot;)), 
$Profile.Id &lt;&gt; &quot;00e800000015KaN&quot; )</errorConditionFormula>
        <errorMessage>If country is US, ZIP must be in &quot;99999&quot; or &quot;99999-9999&quot; format.</errorMessage>
    </validationRules>
</CustomObject>